src/test_files/expected/valid_conditionals.error
Generating LALR tables
Traceback (most recent call last):
  File "/home/beto/PycharmProjects/PPLL_Final/src/main.py", line 57, in <module>
    Main(sys.argv[1],export_tree)
  File "/home/beto/PycharmProjects/PPLL_Final/src/main.py", line 22, in __init__
    result = self.__parser.parse()
             ^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/src/parser.py", line 662, in parse
    result = self.parser.parse(input_data, lexer=self.lexer.lexer)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/.venv/lib/python3.12/site-packages/ply/yacc.py", line 333, in parse
    return self.parseopt_notrack(input, lexer, debug, tracking, tokenfunc)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/.venv/lib/python3.12/site-packages/ply/yacc.py", line 1120, in parseopt_notrack
    p.callable(pslice)
  File "/home/beto/PycharmProjects/PPLL_Final/src/parser.py", line 480, in p_if_statement
    p[2].infer_type()
TypeError: BinaryExpr.infer_type() missing 2 required positional arguments: 'symbols' and 'records'
